# buiz-swarm

./: .gitignore  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: add-api-endpoint.md  add-mcp-tool.md  create-agent.md  fix-bug.md
backend/: .env.example  COMPANY_MANIFEST.json  Dockerfile  docker-compose.openclaw.yml  docker-compose.yml  requirements.txt
backend/app/: __init__.py  config.py  main.py  openclaw_bridge.py  tasks.py
backend/app/agents/: __init__.py  base_agent.py  ceo_agent.py  engineering_agent.py  marketing_agent.py  support_agent.py
backend/app/api/: __init__.py  flash_routes.py  routes.py
backend/app/core/: __init__.py  agent_core.py  bedrock_client.py  company_profile.py  mcp_client.py  swarm_orchestrator.py
backend/app/models/: __init__.py  company.py  task.py  user.py
backend/app/services/: __init__.py  billing_service.py  company_service.py  infrastructure_service.py
backend/app/tools/: __init__.py
backend/app/tools/openclaw/: __init__.py  business.py  mcp_tools.py
frontend/: .vercelignore  angular.json  package.json  vercel.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/services/: api.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
openclaw/: __init__.py  cli.py  flash_generator.py
openclaw_flash_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_flash_generator.py
(+8 files in other folders)
